src/main/java/com/example/demo/dto/errors/ErrorDetailDto.java
package com.example.demo.dto.errors;

public record ErrorDetailDto(
        String field,
        String message,
        String type
) {}
